update nginx and php confs, reload services after setup site, update readme

--- a/config/site.nginx.conf
+++ b/config/site.nginx.conf
@@ -5,7 +5,7 @@ upstream SITE_COM_backend {
 
 server {
     listen 80;
-    server_name www.SITEDOTCOM SITEDOTCOM;
+    server_name www.SITEDOTCOM;
     return 301 http://SITEDOTCOM$request_uri;
 }
 
