--- a/config/site.php-fpm.conf
+++ b/config/site.php-fpm.conf
@@ -27,7 +27,7 @@ env[APP_WP_DB_NAME]="DATABASENAME"
 env[APP_WP_DB_HOST]="DATABASEHOST"
 env[APP_WP_DB_PORT]="DATABASEPORT"
 
-access.log = /proc/self/fd/2
+access.log = /var/www/SITEDOTCOM/DockerLocal/logs/php_access_log.log
 php_admin_value[error_log] = /var/www/SITEDOTCOM/DockerLocal/logs/php_error_log.log
 php_admin_value[session.save_path] = memcached:11211
 php_admin_value[session.save_handler] = memcached
@@ -68,7 +68,7 @@ env[APP_WP_DB_PASS]="DATABASEPASS"
 env[APP_WP_DB_NAME]="DATABASENAME"
 env[APP_WP_DB_HOST]="DATABASEHOST"
 
-access.log = /proc/self/fd/2
+access.log = /var/www/SITEDOTCOM/DockerLocal/logs/php_access_log.log
 php_admin_value[error_log] = /var/www/SITEDOTCOM/DockerLocal/logs/php_error_log.log
 php_admin_value[session.save_path] = memcached:11211
 php_admin_value[session.save_handler] = memcached
