--- a/config/site.nginx.proxy.conf
+++ b/config/site.nginx.proxy.conf
@@ -13,4 +13,12 @@ server {
     access_log /var/www/SITEDOTCOM/logs/access.log;
     error_log  /var/www/SITEDOTCOM/logs/error.log warn;
 
+    location / {
+        proxy_pass         http://localhost:8080;
+        proxy_redirect     off;
+        proxy_set_header   Host $host;
+        proxy_set_header   X-Real-IP $remote_addr;
+        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Host $server_name;
+    }
 }
