Add WEBROOTPATH option to nginx config; Add flags and prompts for webrootpath and release folder to setup-site

--- a/config/site.nginx.proxy.conf
+++ b/config/site.nginx.proxy.conf
@@ -7,7 +7,7 @@ server {
 server {
     listen 80;
     server_name SITEDOTCOM www.SITEDOTCOM;
-    root /var/www/SITEDOTCOM/app;
+    root /var/www/SITEDOTCOM/WEBROOTPATH;
     index index.php index.html;
 
     access_log /var/www/SITEDOTCOM/logs/access.log;
