--- a/config/site.nginx.ssl.conf
+++ b/config/site.nginx.ssl.conf
@@ -1,6 +1,6 @@
 upstream SITE_COM_backend {
-    server unix:/var/run/php7-fpm.SITEDOTCOM.sock1 weight=100 max_fails=5 fail_timeout=5;
-    server unix:/var/run/php7-fpm.SITEDOTCOM.sock2 weight=100 max_fails=5 fail_timeout=5;
+    server unix:/var/run/php-fpm.SITEDOTCOM.sock1 weight=100 max_fails=5 fail_timeout=5;
+    server unix:/var/run/php-fpm.SITEDOTCOM.sock2 weight=100 max_fails=5 fail_timeout=5;
 }
 
 server {
