Ensure in setup-site that nginx w/ php streams is prompted for

--- a/config/site.nginx.proxy.conf
+++ b/config/site.nginx.proxy.conf
@@ -6,7 +6,7 @@ server {
 
 server {
     listen 80;
-    server_name SITEDOTCOM www.SITEDOTCOM;
+    server_name SITEDOTCOM;
     root /var/www/SITEDOTCOM/WEBROOTPATH;
     index index.php index.html;
 
